[tool.poetry]
name = "methodstutorial"
version = "0.1.0"
description = ""
authors = ["MatheusPires95 <macp0411@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.18.1"
matplotlib = "^3.1.3"
pandas = "0.25.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
